--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.0.0</version>
+	            <configuration>
+	                <skipTests>true</skipTests>
+	            </configuration>
             </plugin>
         </plugins>
     </build>
